Kubernetes/yaml/zipkin/zipkin-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mysql
  name: mysql
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30360
  selector:
    app: mysql

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mysql
  namespace: default
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /mysql/data
            - name: mysql-conf
              mountPath: /etc/mysql/conf.d
      volumes:
        - name: mysql-data
          hostPath:
            path: /data/mysql/data
        - name: mysql-conf
          hostPath:
            path: /data/mysql/conf
      nodeSelector:
        ip: "212"
